# boilerplate-ms-python

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  LICENSE  README.md  docker-compose.yaml  pyproject.toml  setup.sh
src/boilerplate_ms_python/: dev_runner.py  main.py
src/boilerplate_ms_python/config/: db_client.py  grpc_interceptor.py  logger_config.py  redis_client.py
src/boilerplate_ms_python/models/: stub_model.py
src/boilerplate_ms_python/repositories/: stub_repository.py
src/boilerplate_ms_python/schemas/: stub_schema.py
src/boilerplate_ms_python/services/: greeter_service.py
tests/: conftest.py
tests/services/: test_greeter_service.py
