[project]
name = "boilerplate-ms-python" #TODO: Replace "boilerplate-ms-python" with your project name
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio (>=1.71.0,<2.0.0)",
    "grpcio-tools (>=1.71.0,<2.0.0)",
    "watchgod (>=0.8.2,<0.9.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "pydantic (>=2.10.6,<3.0.0)",
]

[tool.poetry]
packages = [{include = "boilerplate_ms_python", from = "src"}] #TODO: Replace "boilerplate-ms-python" with your project name


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
