[project]
name = "boilerplate_ms_python"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "grpcio (>=1.71.0,<2.0.0)",
    "grpcio-tools (>=1.71.0,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "sqlalchemy-utils (>=0.41.2,<0.42.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "grpcio-reflection (>=1.71.0,<2.0.0)",
    "redis (>=5.2.1,<6.0.0)",
]

[tool.poetry]
packages = [{include = "boilerplate_ms_python", from = "src"}]


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.13"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
watchgod = "^0.8.2"
pytest-cov = "^6.0.0"
pre-commit = "^4.2.0"
commitlint = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=boilerplate_ms_python --cov-report=term-missing"

[tool.coverage.run]
branch = true

omit = [
  "*/__init__.py",
  "src/boilerplate_ms_python/dev_runner.py",
  "src/boilerplate_ms_python/main.py",
  "src/boilerplate_ms_python/models/*",
  "src/boilerplate_ms_python/config/*",
  "src/boilerplate_ms_python/repositories/*",
  "src/boilerplate_ms_python/schemas/*",
  "src/boilerplate_ms_python/proto_generated/*",
]

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'


[tool.isort]
profile = "black"
line_length = 100
